tests/forof/forof.exp
Error: forof.js:7
  7:     (x: string); // Error - number ~> string
          ^ Cannot cast `x` to string because number [1] is incompatible with string [2].
  References:
    7:     (x: string); // Error - number ~> string
            ^ [1]: number
    7:     (x: string); // Error - number ~> string
               ^^^^^^ [2]: string

Error: forof.js:13
 13:     (x: string); // Error - number ~> string
          ^ Cannot cast `x` to string because number [1] is incompatible with string [2].
  References:
   13:     (x: string); // Error - number ~> string
            ^ [1]: number
   13:     (x: string); // Error - number ~> string
               ^^^^^^ [2]: string

Error: forof.js:25
 25:     (x: number); // Error - string ~> number
          ^ Cannot cast `x` to number because string [1] is incompatible with number [2].
  References:
   25:     (x: number); // Error - string ~> number
            ^ [1]: string
   25:     (x: number); // Error - string ~> number
               ^^^^^^ [2]: number

Error: forof.js:32
 32:     (elem: number); // Error - tuple ~> number
          ^^^^ Cannot cast `elem` to number because tuple type [1] is incompatible with number [2].
  References:
   32:     (elem: number); // Error - tuple ~> number
            ^^^^ [1]: tuple type
   32:     (elem: number); // Error - tuple ~> number
                  ^^^^^^ [2]: number

Error: forof.js:39
 39:     (elem: number); // Error - tuple ~> number
          ^^^^ Cannot cast `elem` to number because tuple type [1] is incompatible with number [2].
  References:
   39:     (elem: number); // Error - tuple ~> number
            ^^^^ [1]: tuple type
   39:     (elem: number); // Error - tuple ~> number
                  ^^^^^^ [2]: number

Error: forof.js:45
 45:     (x: number); // Error - string ~> number
          ^ Cannot cast `x` to number because string [1] is incompatible with number [2].
  References:
   45:     (x: number); // Error - string ~> number
            ^ [1]: string
   45:     (x: number); // Error - string ~> number
               ^^^^^^ [2]: number


Found 6 errors
